fix: quick links block overlap

--- a/web/wp-content/themes/mm-bradentongulfislands/assets/src/scripts/gutenberg/blocks/quick-links/styles/style.scss
+++ b/web/wp-content/themes/mm-bradentongulfislands/assets/src/scripts/gutenberg/blocks/quick-links/styles/style.scss
@@ -12,7 +12,7 @@
   border-top-left-radius: 18px;
   border-bottom-left-radius: 18px;
   border: 0.5px solid #FFFFFF;
-  z-index: 10;
+  z-index: 100;
   transition: all 0.2s ease-in-out;
   transform: translateX(0);
 
